--- a/SQL/What and Where are the World's Oldest Businesses/readme
+++ b/SQL/What and Where are the World's Oldest Businesses/readme
@@ -1,1 +1,9 @@
-
+An important part of business is planning for the future and ensuring that the company survives changing market conditions. Some businesses do this really well and last for hundreds of years.
+BusinessFinancing.co.uk researched the oldest company that is still in business in (almost) every country and compiled the results into a dataset. 
+In this project, We explore that dataset to see what they found.
+Asking questions such as
+1.  How many businesses were founded before 1000?
+2.  Which businesses were founded before 1000?
+3.  Exploring the categories
+4.  Oldest business by continent
+Combining three tabels for furthur analysis
